--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Khula:wght@300&family=Lobster&family=Quantico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Quantico&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Lobster&family=Quantico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Coda&family=Khula:wght@300&family=Lobster&family=Quantico&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Chocolate Pizza</title>
@@ -47,28 +48,34 @@
     <main>
         <section>
             <h2>Chocolate Pizza</h2>
-            <div>
+            <div id="main-heading">
                 <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
-                <img src="images/print-icon.png" alt="">
+                <div>
+                    <img src="images/print-icon.png" alt=""> PRINT
+                </div>
             </div>
         </section>
 
+        <section id="hero-img">
+            <img src="images/choco-pizza.png" alt="">
+        </section>
+
         <section>
-            <div>
+            <div class="paragraph">
                 <p>
                 For the fig-swirl:Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve
                 all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring
-                frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside an dlet cool
+                frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside an dlet cool.
                 </p>
             </div>
-            <div>
+            <div class="paragraph">
                 <p>
                 Ice cream:In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
                 dissolved and the milk is just barely lukewarm.Wish in the egg yolks. Set mixture in the fridge and wait
                 until the fig mixture is cooled.
                 </p>
             </div>
-            <div>
+            <div class="paragraph">
                 <p>
                 Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
                 instructions,i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the
@@ -78,8 +85,50 @@
             </div>
         </section>
 
-        <section>
+        <section id="container">
             <img src="images/list-bg.png" alt="">
+                <div id="item-list">
+                    <div class="item">
+                        <input type="checkbox">
+                        <label for="nameField">1 1/2 cups milks</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">1/2 cup mascarpone</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">1/2 tsp pink salt </label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">1lb black mission figs</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">1/2 cup brown sugar</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">2-4 tbsp water</label>
+                        <br>
+                    </div>
+                    <div class="item">
+                        <input type="checkbox">
+                        <label for="nameField">1 1/2 cups heavy cream</label>
+                        <br>
+                        <input type="checkbox" checked>
+                        <label for="nameField" class="item1">1/3 granulated sugar</label>
+                        <br>
+                        <input type="checkbox" checked>
+                        <label for="nameField" class="item1">2 eggs yolks </label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">1 Lemon juiced</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">2 tbsp butter</label>
+                        <br>
+                        <input type="checkbox">
+                        <label for="nameField">1 cup honey roasted pecans, roughly chopped </label>
+                    </div>
+                </div>
+
         </section>
 
         <hr>
