--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div>
             <div class="Heading">
-                <img src="../images/logo.png" alt="">
+                <img src="images/logo.png" alt="">
             </div>
             <div class="Heading">
                 <h1>Delicious</h1>
@@ -27,17 +27,17 @@
         </div>
         <nav>
             <ul>
-                <li><img src="../images/fb-icon.png" alt=""></li>
-                <li><img src="../images/twit-icon.png" alt=""></li>
-                <li><img src="../images/gp-icon.png" alt=""></li>
-                <li><img src="../images/insta-icon.png" alt=""></li>
-                <li><img src="../images/flic-icon.png" alt=""></li>
-                <li><img src="../images/pint-icon.png" alt=""></li>
+                <li><img src="images/fb-icon.png" alt=""></li>
+                <li><img src="images/twit-icon.png" alt=""></li>
+                <li><img src="images/gp-icon.png" alt=""></li>
+                <li><img src="images/insta-icon.png" alt=""></li>
+                <li><img src="images/flic-icon.png" alt=""></li>
+                <li><img src="images/pint-icon.png" alt=""></li>
                 <li></li>
                 <li></li>
                 <li></li>
-                <li><img src="../images/rss-icon.png" alt=""></li>
-                <li><img src="../images/mail-icon.png" alt=""></li>
+                <li><img src="images/rss-icon.png" alt=""></li>
+                <li><img src="images/mail-icon.png" alt=""></li>
             </ul>
         </nav>
         
